Bug 855523 - Markup-view lines are easier to expand/collapse; r=mratcliffe
UltraBlame original commit: 1892b204f83687ad70543f436e40622c1c19cb38

--- a/browser/devtools/markupview/markup-view.css
+++ b/browser/devtools/markupview/markup-view.css
@@ -1,4 +1,21 @@
-ul
+#
+root
+-
+wrapper
+{
+overflow
+:
+hidden
+;
+min
+-
+width
+:
+250px
+;
+}
+.
+children
 {
 list
 -
@@ -6,17 +23,125 @@ style
 :
 none
 ;
-}
-ul
-.
-children
+padding
 :
-not
-(
-[
-expanded
-]
-)
+0
+;
+margin
+:
+0
+;
+}
+.
+child
+{
+margin
+-
+left
+:
+-
+1000em
+;
+padding
+-
+left
+:
+1001em
+;
+}
+.
+tag
+-
+line
+{
+min
+-
+height
+:
+1
+.
+4em
+;
+line
+-
+height
+:
+1
+.
+4em
+;
+position
+:
+relative
+;
+}
+.
+tag
+-
+line
+.
+highlighter
+{
+content
+:
+"
+"
+;
+position
+:
+absolute
+;
+left
+:
+-
+1000em
+;
+right
+:
+0
+;
+height
+:
+100
+%
+;
+z
+-
+index
+:
+-
+1
+;
+}
+.
+expander
+{
+display
+:
+inline
+-
+block
+;
+margin
+-
+left
+:
+-
+14px
+;
+vertical
+-
+align
+:
+middle
+;
+}
+.
+child
+.
+collapsed
+.
+child
 {
 display
 :
@@ -24,13 +149,75 @@ none
 ;
 }
 .
-codebox
+child
+>
+.
+tag
+-
+line
+:
+first
+-
+child
+.
+close
+{
+display
+:
+none
+;
+}
+.
+child
+.
+collapsed
+>
+.
+tag
+-
+line
+:
+first
+-
+child
+.
+close
 {
 display
 :
 inline
+;
+}
+.
+child
+.
+collapsed
+>
+.
+tag
 -
-block
+line
+~
+.
+tag
+-
+line
+{
+display
+:
+none
+;
+}
+.
+child
+.
+collapsed
+.
+close
+{
+display
+:
+inline
 ;
 }
 .
@@ -57,6 +244,11 @@ right
 -
 1em
 ;
+padding
+:
+1px
+0
+;
 }
 .
 newattr
@@ -68,37 +260,6 @@ margin
 right
 :
 0
-;
-}
-.
-closing
--
-bracket
-{
-pointer
--
-events
-:
-none
-;
-}
-.
-summary
-{
-cursor
-:
-pointer
-;
-}
-.
-summary
-[
-expanded
-]
-{
-display
-:
-none
 ;
 }
 #
